[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "woob-mcp-server"
version="0.1.0"
description = "A MCP server exposing woob functions, like accessing your bank accounts"
authors = [ { name="Pierre-Hugues Husson", email="phh@phh.me"} ]
dependencies = [ "mcp", "woob" ]

[project.scripts]
woob-mcp-server = 'main:main'
